[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/fuentes/AldotheApache.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/3nivel1.png" type="Texture" id=2]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/2nivel1.png" type="Texture" id=3]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/1nivel1.png" type="Texture" id=4]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/1nivel2.png" type="Texture" id=5]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/2nivel2.png" type="Texture" id=6]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/3nivel2.png" type="Texture" id=7]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/2nivel3.png" type="Texture" id=8]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/1nivel3.png" type="Texture" id=9]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/3nivel3.png" type="Texture" id=10]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/return2.png" type="Texture" id=11]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/return1.png" type="Texture" id=12]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/return3.png" type="Texture" id=13]
[ext_resource path="res://Menu/LevelMenu/LevelMenu.gd" type="Script" id=14]
[ext_resource path="res://Menu/LevelMenu/LevelMenuAssets/game_background_1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Music/Niveles.ogg" type="AudioStream" id=16]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 1 )

[node name="LevelSelector" type="CanvasLayer"]
script = ExtResource( 14 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -293.665
margin_top = -218.914
margin_right = 1626.34
margin_bottom = 861.086
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 90.0
margin_right = 1280.0
margin_bottom = 590.0
custom_constants/separation = 150
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 9
custom_constants/shadow_offset_y = 4
text = "NIVELES"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 250.0
margin_right = 1280.0
margin_bottom = 431.0
custom_constants/separation = 60
alignment = 1

[node name="Level1" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 370.0
margin_bottom = 181.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Level2" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 430.0
margin_right = 610.0
margin_bottom = 181.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Level3" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 670.0
margin_right = 850.0
margin_bottom = 181.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )

[node name="Return" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 910.0
margin_right = 1090.0
margin_bottom = 181.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -20.0
autoplay = true
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Return" to="." method="_on_Return_pressed"]
